Stop overflowing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: "Papyrus", serif;
+    overflow: hidden;
 }
 
 h1 {
